--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 				<div>
 						<a><span>купити аксесуари і корм </span></a>
 						<div>
-    <a href="">Купити корм </a>
-    <a href="">Купити аксесуари для улюбленців </a>
+    <a href="https://tanyabagrii.github.io/Karl2/">Купити корм </a>
+    <a href="https://tanyabagrii.github.io/Karl3/">Купити аксесуари для улюбленців </a>
     </div>
 				</div>
     </nav>
